WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42003
User style sheets apply to pages immediately instead of waiting for reload
https://bugs.webkit.org/show_bug.cgi?id=42003
Summary
User style sheets apply to pages immediately instead of waiting for reload
Aaron Boodman
Reported
2010-07-09 16:44:01 PDT
User style sheets apply to pages immediately instead of waiting for reload. This seems inconsistent with user scripts, which must wait for a reload. An extension which uses both features will see inconsistent behavior. This could cause a problem if a stylesheet hides all images by default, and expects a script to run after, which shows some of them.
Attachments
Patch
(4.27 KB, patch)
2010-07-13 12:15 PDT
,
Aaron Boodman
timothy
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2010-07-09 20:20:41 PDT
On the flip side we have had developers coment and expect the scripts to run when installed, like styles. In general they are surprised you need to reload to get scripts to work.
Aaron Boodman
Comment 2
2010-07-13 11:57:35 PDT
I'm just going to do a quick hack to fix Chromium, then try something more clever and general separately.
Aaron Boodman
Comment 3
2010-07-13 12:15:15 PDT
Created
attachment 61405
[details]
Patch
mitz
Comment 4
2010-07-13 12:17:51 PDT
Will this change how the Style sheet menu in Safari’s Advanced preferences behaves?
Aaron Boodman
Comment 5
2010-07-13 12:21:41 PDT
This patch won't affect Safari at all (it is Chromium-specific). The future work I do won't affect Safari either, but because the behavior will be configurable and I won't change the setting for Safari.
Aaron Boodman
Comment 6
2010-07-13 13:31:52 PDT
Committed
r63243
: <
http://trac.webkit.org/changeset/63243
>
WebKit Commit Bot
Comment 7
2010-07-13 14:08:11 PDT
Comment on
attachment 61405
[details]
Patch Rejecting patch 61405 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Timothy Hatcher', u'--force']" exit_code: 1 Parsed 3 diffs from patch file(s). patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/page/PageGroup.cpp Hunk #1 FAILED at 242. Hunk #2 FAILED at 296. Hunk #3 FAILED at 329. Hunk #4 FAILED at 338. 4 out of 4 hunks FAILED -- saving rejects to file WebCore/page/PageGroup.cpp.rej patching file WebCore/page/PageGroup.h Hunk #1 FAILED at 94. 1 out of 1 hunk FAILED -- saving rejects to file WebCore/page/PageGroup.h.rej Full output:
http://webkit-commit-queue.appspot.com/results/3548014
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug