third_party/WebKit/WebCore/page/PageGroup.h
@@ -95,7 +95,8 @@ namespace WebCore {
 
     private:
         void addVisitedLink(LinkHash stringHash);
-
+        void resetUserStyleCacheInAllFrames();
+  
         String m_name;
 
         HashSet<Page*> m_pages;
